@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class ComentarioServiceImpl implements ComentarioService {
@@ -35,7 +34,7 @@ public class ComentarioServiceImpl implements ComentarioService {
         final List<Comentario> comentarios = comentarioRepository.findByAvaliacaoId(avaliacaoId);
         return comentarios.stream()
                 .map(ComentarioResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -46,7 +45,7 @@ public class ComentarioServiceImpl implements ComentarioService {
         final Comentario comentario = new Comentario();
         comentario.setAvaliacao(avaliacao);
         comentario.setUsuario(usuario);
-        comentario.setComentario(texto);
+        comentario.setConteudo(texto);
         comentarioRepository.save(comentario);
         return modelMapper.map(comentario, ComentarioResponseDTO.class);
     }
